--- a/nextstreamserver/package.json
+++ b/nextstreamserver/package.json
@@ -40,6 +40,7 @@
     "@types/nodemailer": "^6.4.2",
     "@types/react": "^17.0.11",
     "eslint": "7.28.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "typescript": "^4.4.4"
   }
 }
